# hashcore

./: Cargo.toml  README.md  hashcore.h
src/: lib.rs
