[package]
name = "hashcore"
version = "1.0.0"
edition = "2021"
authors = ["Mullet"]
description = "C-compatible shared library for xxHash64 file hashing with streaming I/O"
readme = "README.md"
repository = "https://github.com/marshmallow868/hashcore"
license-file = "LICENSE"
publish = false

[lib]
crate-type = ["cdylib"]
name = "hashcore"
path = "src/lib.rs"

[dependencies]
xxhash-rust = { version = "0.8", features = ["xxh64"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0